--- a/css/style.css
+++ b/css/style.css
@@ -10,34 +10,40 @@ body
     width: 100vw;
     height: 100vh;
     color: white;
-    background-color: rgb(241, 195, 255);
+    font-family: 'Poiret One', cursive;
+    background-color: rgb(94, 26, 88);
+    text-align: center;
 }
 
 .black-screen
 {
+    padding-left: 10vw;
+    padding-right: 10vw;
     position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-    transition: 1000ms ease-in-out;
     background-color: rgb(0, 0, 0);
     opacity: 1;
 }
 
 .sun
 {
+    padding-left: 10vw;
+    padding-right: 10vw;
     position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: -1;
-    color: rgb(220, 104, 255);
+    z-index: -3;
+    color: rgb(246, 217, 255);
 }
 
 .fade
 {
+    transition: 1000ms ease-in-out;
     opacity: 0;
     pointer-events: none;
     user-select: none;
@@ -49,3 +55,79 @@ body
     align-items: center;
     justify-content: center;
 }
+
+.prepromise
+{
+    padding-left: 10vw;
+    padding-right: 10vw;
+}
+
+.loading
+{
+    position: absolute;
+    padding-left: 10vw;
+    padding-right: 10vw;
+    padding-top: 35vh;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: -1;
+    background-color: rgb(57, 19, 68);
+}
+
+.lds-heart {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+    transform: rotate(45deg);
+    transform-origin: 40px 40px;
+  }
+  .lds-heart div {
+    top: 32px;
+    left: 32px;
+    position: absolute;
+    width: 32px;
+    height: 32px;
+    background: #fff;
+    animation: lds-heart 1.2s infinite cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+  .lds-heart div:after,
+  .lds-heart div:before {
+    content: " ";
+    position: absolute;
+    display: block;
+    width: 32px;
+    height: 32px;
+    background: #fff;
+  }
+  .lds-heart div:before {
+    left: -24px;
+    border-radius: 50% 0 0 50%;
+  }
+  .lds-heart div:after {
+    top: -24px;
+    border-radius: 50% 50% 0 0;
+  }
+  @keyframes lds-heart {
+    0% {
+      transform: scale(0.95);
+    }
+    5% {
+      transform: scale(1.1);
+    }
+    39% {
+      transform: scale(0.85);
+    }
+    45% {
+      transform: scale(1);
+    }
+    60% {
+      transform: scale(0.95);
+    }
+    100% {
+      transform: scale(0.9);
+    }
+  }
+  
