--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,18 @@ body
     background-color: rgb(57, 19, 68);
 }
 
+.copyright
+{
+    position: absolute;
+    opacity: 0.5;
+    bottom: 1vh;
+    text-align: right;
+    padding-right: 5vw;
+    left: 0;
+    right: 0;
+    font-size: 10px;
+}
+
 .lds-heart {
     display: inline-block;
     position: relative;
