--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body
     height: 100vh;
     color: white;
     font-family: 'Poiret One', cursive;
-    background-color: rgb(94, 26, 88);
+    background-color: rgb(61, 17, 58);
     text-align: center;
 }
 
@@ -74,19 +74,33 @@ body
     left: 0;
     right: 0;
     z-index: -1;
-    background-color: rgb(57, 19, 68);
+    background-color: rgb(22, 7, 26);
 }
 
 .copyright
 {
-    position: absolute;
+    position: fixed;
     opacity: 0.5;
     bottom: 1vh;
-    text-align: right;
+    text-align: center;
+    padding-left: 5vw;
     padding-right: 5vw;
     left: 0;
     right: 0;
     font-size: 10px;
+}
+
+.date
+{
+    position: absolute;
+    opacity: 0.75;
+    top: 1vh;
+    text-align: center;
+    padding-left: 5vw;
+    padding-right: 5vw;
+    left: 0;
+    right: 0;
+    font-size: 18px;
 }
 
 .lds-heart {
