--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,19 @@ body
     opacity: 1;
 }
 
+canvas {
+  display: block;
+  vertical-align: bottom;
+}
+
+#particles-js {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  user-select: none;
+}
+
 .sun
 {
     padding-left: 10vw;
