--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body
     font-family: 'Poiret One', cursive;
     background-color: rgb(61, 17, 58);
     text-align: center;
+    line-height: 1.5;
 }
 
 .black-screen
@@ -27,6 +28,36 @@ body
     right: 0;
     background-color: rgb(0, 0, 0);
     opacity: 1;
+}
+
+.access_screen
+{
+  transition: 200ms ease-in-out !important; 
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: 2;
+  background-color: black;
+}
+
+.access_window
+{
+  padding: 16px 32px 32px 32px;
+  background-color: rgb(4, 4, 36);
+  border-radius: 15px;
+}
+
+.access_header
+{
+  font-size: 32px;
+  margin-bottom: 16px;
+}
+
+.hidden
+{
+  display: none !important;
 }
 
 canvas {
@@ -57,7 +88,7 @@ canvas {
 
 .fade
 {
-    transition: 1000ms ease-in-out;
+    transition: 500ms ease-in-out;
     opacity: 0;
     pointer-events: none;
     user-select: none;
@@ -130,8 +161,8 @@ canvas {
     position: absolute;
     width: 32px;
     height: 32px;
-    background: #fff;
-    animation: lds-heart 1.2s infinite cubic-bezier(0.215, 0.61, 0.355, 1);
+    background: rgb(182, 36, 36);
+    animation: lds-heart 0.9s infinite cubic-bezier(0.215, 0.61, 0.355, 1);
   }
   .lds-heart div:after,
   .lds-heart div:before {
@@ -140,7 +171,7 @@ canvas {
     display: block;
     width: 32px;
     height: 32px;
-    background: #fff;
+    background: rgb(182, 36, 36);
   }
   .lds-heart div:before {
     left: -24px;
